Fix styles on smaller screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,7 @@ body,
   box-shadow: 0 30px 60px -15px #888888;
   max-width: 400px;
   max-height: 500px;
+  min-height: 330px;
   width: 100%;
   height: 100%;
 
@@ -41,6 +42,8 @@ body,
   background: #D6D6D6;
   background-size: cover;
   flex: 1;
+
+  padding-bottom: 0;
 }
 
 .highlight {
